--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -9,40 +9,42 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a283dd86-9081-4213-b223-3ab7e11747ac",
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "0a8f1002-846a-486f-a6ec-7b60bdc2dd99",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
+    "# Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
     "\n",
-    "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+    "# You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
     "\n",
-    "You can return the answer in any order.\n",
+    "# You can return the answer in any order.\n",
     "\n",
-    "Example 1:\n",
+    "# Example 1:\n",
     "\n",
-    "Input: nums = [2,7,11,15], target = 9\n",
-    "Output: [0,1]\n",
-    "Explanation: Because nums[0] + nums[1] == 9, we return [0, 1].\n",
-    "Example 2:\n",
+    "# Input: nums = [2,7,11,15], target = 9\n",
+    "# Output: [0,1]\n",
+    "# Explanation: Because nums[0] + nums[1] == 9, we return [0, 1].\n",
+    "# Example 2:\n",
     "\n",
-    "Input: nums = [3,2,4], target = 6\n",
-    "Output: [1,2]\n",
-    "Example 3:\n",
+    "# Input: nums = [3,2,4], target = 6\n",
+    "# Output: [1,2]\n",
+    "# Example 3:\n",
     "\n",
-    "Input: nums = [3,3], target = 6\n",
-    "Output: [0,1]\n",
+    "# Input: nums = [3,3], target = 6\n",
+    "# Output: [0,1]\n",
     " \n",
     "\n",
-    "Constraints:\n",
+    "# Constraints:\n",
     "\n",
-    "2 <= nums.length <= 10^4\n",
-    "-10^9 <= nums[i] <= 10^9\n",
-    "-10^9 <= target <= 10^9\n",
-    "Only one valid answer exists.\n",
+    "# 2 <= nums.length <= 10^4\n",
+    "# -10^9 <= nums[i] <= 10^9\n",
+    "# -10^9 <= target <= 10^9\n",
+    "# Only one valid answer exists.\n",
     " \n",
     "\n",
-    "Follow-up: Can you come up with an algorithm that is less than O(n^2) time complexity?"
+    "# Follow-up: Can you come up with an algorithm that is less than O(n^2) time complexity?"
    ]
   },
   {
@@ -104,54 +106,56 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "dfdd4c94-501a-4e38-ad48-98b644ce7f87",
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "070d9ff9-5dfc-4f8e-b0f6-b1e611737edf",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. \n",
-    "The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
+    "# Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. \n",
+    "# The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
     "\n",
-    "Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
+    "# Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
     "\n",
-    "Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. \n",
-    "The remaining elements of nums are not important as well as the size of nums.\n",
-    "Return k.\n",
-    "Custom Judge:\n",
+    "# Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. \n",
+    "# The remaining elements of nums are not important as well as the size of nums.\n",
+    "# Return k.\n",
+    "# Custom Judge:\n",
     "\n",
-    "The judge will test your solution with the following code:\n",
+    "# The judge will test your solution with the following code:\n",
     "\n",
-    "int[] nums = [...]; // Input array\n",
-    "int[] expectedNums = [...]; // The expected answer with correct length\n",
+    "# int[] nums = [...]; // Input array\n",
+    "# int[] expectedNums = [...]; // The expected answer with correct length\n",
     "\n",
-    "int k = removeDuplicates(nums); // Calls your implementation\n",
+    "# int k = removeDuplicates(nums); // Calls your implementation\n",
     "\n",
-    "assert k == expectedNums.length;\n",
-    "for (int i = 0; i < k; i++) {\n",
-    "    assert nums[i] == expectedNums[i];\n",
-    "}\n",
-    "If all assertions pass, then your solution will be accepted.\n",
+    "# assert k == expectedNums.length;\n",
+    "# for (int i = 0; i < k; i++) {\n",
+    "#     assert nums[i] == expectedNums[i];\n",
+    "# }\n",
+    "# If all assertions pass, then your solution will be accepted.\n",
     "\n",
     " \n",
     "\n",
-    "Example 1:\n",
+    "# Example 1:\n",
     "\n",
-    "Input: nums = [1,1,2]\n",
-    "Output: 2, nums = [1,2,_]\n",
-    "Explanation: Your function should return k = 2, with the first two elements of nums being 1 and 2 respectively.\n",
-    "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
-    "Example 2:\n",
+    "# Input: nums = [1,1,2]\n",
+    "# Output: 2, nums = [1,2,_]\n",
+    "# Explanation: Your function should return k = 2, with the first two elements of nums being 1 and 2 respectively.\n",
+    "# It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+    "# Example 2:\n",
     "\n",
-    "Input: nums = [0,0,1,1,1,2,2,3,3,4]\n",
-    "Output: 5, nums = [0,1,2,3,4,_,_,_,_,_]\n",
-    "Explanation: Your function should return k = 5, with the first five elements of nums being 0, 1, 2, 3, and 4 respectively.\n",
-    "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+    "# Input: nums = [0,0,1,1,1,2,2,3,3,4]\n",
+    "# Output: 5, nums = [0,1,2,3,4,_,_,_,_,_]\n",
+    "# Explanation: Your function should return k = 5, with the first five elements of nums being 0, 1, 2, 3, and 4 respectively.\n",
+    "# It does not matter what you leave beyond the returned k (hence they are underscores).\n",
     " \n",
     "\n",
-    "Constraints:\n",
+    "# Constraints:\n",
     "\n",
-    "1 <= nums.length <= 3 * 10^4\n",
-    "-100 <= nums[i] <= 100\n",
-    "nums is sorted in non-decreasing order."
+    "# 1 <= nums.length <= 3 * 10^4\n",
+    "# -100 <= nums[i] <= 100\n",
+    "# nums is sorted in non-decreasing order."
    ]
   },
   {
@@ -219,59 +223,61 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f658346f-8ae1-4cfc-9d30-3da83dd8078c",
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "7244c51f-579c-46d8-bc91-f53e71b911eb",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. \n",
-    "Then return the number of elements in nums which are not equal to val.\n",
+    "# Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. \n",
+    "# Then return the number of elements in nums which are not equal to val.\n",
     "\n",
-    "Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
+    "# Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
     "\n",
-    "Change the array nums such that the first k elements of nums contain the elements which are not equal to val. \n",
-    "The remaining elements of nums are not important as well as the size of nums.\n",
-    "Return k.\n",
+    "# Change the array nums such that the first k elements of nums contain the elements which are not equal to val. \n",
+    "# The remaining elements of nums are not important as well as the size of nums.\n",
+    "# Return k.\n",
     "\n",
-    "Custom Judge:\n",
+    "# Custom Judge:\n",
     "\n",
-    "The judge will test your solution with the following code:\n",
+    "# The judge will test your solution with the following code:\n",
     "\n",
-    "int[] nums = [...]; // Input array\n",
-    "int val = ...; // Value to remove\n",
-    "int[] expectedNums = [...]; // The expected answer with correct length.\n",
-    "                            // It is sorted with no values equaling val.\n",
+    "# int[] nums = [...]; // Input array\n",
+    "# int val = ...; // Value to remove\n",
+    "# int[] expectedNums = [...]; // The expected answer with correct length.\n",
+    "#                             // It is sorted with no values equaling val.\n",
     "\n",
-    "int k = removeElement(nums, val); // Calls your implementation\n",
+    "# int k = removeElement(nums, val); // Calls your implementation\n",
     "\n",
-    "assert k == expectedNums.length;\n",
-    "sort(nums, 0, k); // Sort the first k elements of nums\n",
-    "for (int i = 0; i < actualLength; i++) {\n",
-    "    assert nums[i] == expectedNums[i];\n",
-    "}\n",
-    "If all assertions pass, then your solution will be accepted.\n",
+    "# assert k == expectedNums.length;\n",
+    "# sort(nums, 0, k); // Sort the first k elements of nums\n",
+    "# for (int i = 0; i < actualLength; i++) {\n",
+    "#     assert nums[i] == expectedNums[i];\n",
+    "# }\n",
+    "# If all assertions pass, then your solution will be accepted.\n",
     "\n",
     " \n",
     "\n",
-    "Example 1:\n",
+    "# Example 1:\n",
     "\n",
-    "Input: nums = [3,2,2,3], val = 3\n",
-    "Output: 2, nums = [2,2,_,_]\n",
-    "Explanation: Your function should return k = 2, with the first two elements of nums being 2.\n",
-    "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
-    "Example 2:\n",
+    "# Input: nums = [3,2,2,3], val = 3\n",
+    "# Output: 2, nums = [2,2,_,_]\n",
+    "# Explanation: Your function should return k = 2, with the first two elements of nums being 2.\n",
+    "# It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+    "# Example 2:\n",
     "\n",
-    "Input: nums = [0,1,2,2,3,0,4,2], val = 2\n",
-    "Output: 5, nums = [0,1,4,0,3,_,_,_]\n",
-    "Explanation: Your function should return k = 5, with the first five elements of nums containing 0, 0, 1, 3, and 4.\n",
-    "Note that the five elements can be returned in any order.\n",
-    "It does not matter what you leave beyond the returned k (hence they are underscores).\n",
+    "# Input: nums = [0,1,2,2,3,0,4,2], val = 2\n",
+    "# Output: 5, nums = [0,1,4,0,3,_,_,_]\n",
+    "# Explanation: Your function should return k = 5, with the first five elements of nums containing 0, 0, 1, 3, and 4.\n",
+    "# Note that the five elements can be returned in any order.\n",
+    "# It does not matter what you leave beyond the returned k (hence they are underscores).\n",
     " \n",
     "\n",
-    "Constraints:\n",
+    "# Constraints:\n",
     "\n",
-    "0 <= nums.length <= 100\n",
-    "0 <= nums[i] <= 50\n",
-    "0 <= val <= 100"
+    "# 0 <= nums.length <= 100\n",
+    "# 0 <= nums[i] <= 50\n",
+    "# 0 <= val <= 100"
    ]
   },
   {
@@ -340,36 +346,39 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "bd13ec79-0519-4e2f-8af9-ae054a0e49de",
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "2c11df1d-a7ac-46d2-bb27-54f8e5487e5e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Given a sorted array of distinct integers and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.\n",
+    "# Given a sorted array of distinct integers and a target value, return the index if the target is found. \n",
+    "# If not, return the index where it would be if it were inserted in order.\n",
     "\n",
-    "You must write an algorithm with O(log n) runtime complexity.\n",
+    "# You must write an algorithm with O(log n) runtime complexity.\n",
     "\n",
     " \n",
     "\n",
-    "Example 1:\n",
+    "# Example 1:\n",
     "\n",
-    "Input: nums = [1,3,5,6], target = 5\n",
-    "Output: 2\n",
-    "Example 2:\n",
+    "# Input: nums = [1,3,5,6], target = 5\n",
+    "# Output: 2\n",
+    "# Example 2:\n",
     "\n",
-    "Input: nums = [1,3,5,6], target = 2\n",
-    "Output: 1\n",
-    "Example 3:\n",
+    "# Input: nums = [1,3,5,6], target = 2\n",
+    "# Output: 1\n",
+    "# Example 3:\n",
     "\n",
-    "Input: nums = [1,3,5,6], target = 7\n",
-    "Output: 4\n",
+    "# Input: nums = [1,3,5,6], target = 7\n",
+    "# Output: 4\n",
     " \n",
     "\n",
-    "Constraints:\n",
+    "# Constraints:\n",
     "\n",
-    "1 <= nums.length <= 10^4\n",
-    "-10^4 <= nums[i] <= 10^4\n",
-    "nums contains distinct values sorted in ascending order.\n",
-    "-10^4 <= target <= 10^4"
+    "# 1 <= nums.length <= 10^4\n",
+    "# -10^4 <= nums[i] <= 10^4\n",
+    "# nums contains distinct values sorted in ascending order.\n",
+    "# -10^4 <= target <= 10^4"
    ]
   },
   {
@@ -440,52 +449,54 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6f753ccb-f06b-4c51-acc0-84b3db99f54b",
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "dee64e86-2518-4be5-a815-9a2e728fb6ef",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "You are given two integer arrays nums1 and nums2, sorted in non-decreasing order, and two integers m and n, \n",
-    "representing the number of elements in nums1 and nums2 respectively.\n",
+    "# You are given two integer arrays nums1 and nums2, sorted in non-decreasing order, and two integers m and n, \n",
+    "# representing the number of elements in nums1 and nums2 respectively.\n",
     "\n",
-    "Merge nums1 and nums2 into a single array sorted in non-decreasing order.\n",
+    "# Merge nums1 and nums2 into a single array sorted in non-decreasing order.\n",
     "\n",
-    "The final sorted array should not be returned by the function, but instead be stored inside the array nums1. \n",
-    "To accommodate this, nums1 has a length of m + n, where the first m elements denote the elements that should be merged, \n",
-    "and the last n elements are set to 0 and should be ignored. nums2 has a length of n.\n",
+    "# The final sorted array should not be returned by the function, but instead be stored inside the array nums1. \n",
+    "# To accommodate this, nums1 has a length of m + n, where the first m elements denote the elements that should be merged, \n",
+    "# and the last n elements are set to 0 and should be ignored. nums2 has a length of n.\n",
     "\n",
     " \n",
     "\n",
-    "Example 1:\n",
+    "# Example 1:\n",
     "\n",
-    "Input: nums1 = [1,2,3,0,0,0], m = 3, nums2 = [2,5,6], n = 3\n",
-    "Output: [1,2,2,3,5,6]\n",
-    "Explanation: The arrays we are merging are [1,2,3] and [2,5,6].\n",
-    "The result of the merge is [1,2,2,3,5,6] with the underlined elements coming from nums1.\n",
-    "Example 2:\n",
+    "# Input: nums1 = [1,2,3,0,0,0], m = 3, nums2 = [2,5,6], n = 3\n",
+    "# Output: [1,2,2,3,5,6]\n",
+    "# Explanation: The arrays we are merging are [1,2,3] and [2,5,6].\n",
+    "# The result of the merge is [1,2,2,3,5,6] with the underlined elements coming from nums1.\n",
+    "# Example 2:\n",
     "\n",
-    "Input: nums1 = [1], m = 1, nums2 = [], n = 0\n",
-    "Output: [1]\n",
-    "Explanation: The arrays we are merging are [1] and [].\n",
-    "The result of the merge is [1].\n",
-    "Example 3:\n",
+    "# Input: nums1 = [1], m = 1, nums2 = [], n = 0\n",
+    "# Output: [1]\n",
+    "# Explanation: The arrays we are merging are [1] and [].\n",
+    "# The result of the merge is [1].\n",
+    "# Example 3:\n",
     "\n",
-    "Input: nums1 = [0], m = 0, nums2 = [1], n = 1\n",
-    "Output: [1]\n",
-    "Explanation: The arrays we are merging are [] and [1].\n",
-    "The result of the merge is [1].\n",
-    "Note that because m = 0, there are no elements in nums1. The 0 is only there to ensure the merge result can fit in nums1.\n",
+    "# Input: nums1 = [0], m = 0, nums2 = [1], n = 1\n",
+    "# Output: [1]\n",
+    "# Explanation: The arrays we are merging are [] and [1].\n",
+    "# The result of the merge is [1].\n",
+    "# Note that because m = 0, there are no elements in nums1. The 0 is only there to ensure the merge result can fit in nums1.\n",
     " \n",
     "\n",
-    "Constraints:\n",
+    "# Constraints:\n",
     "\n",
-    "nums1.length == m + n\n",
-    "nums2.length == n\n",
-    "0 <= m, n <= 200\n",
-    "1 <= m + n <= 200\n",
-    "-109 <= nums1[i], nums2[j] <= 109\n",
+    "# nums1.length == m + n\n",
+    "# nums2.length == n\n",
+    "# 0 <= m, n <= 200\n",
+    "# 1 <= m + n <= 200\n",
+    "# -109 <= nums1[i], nums2[j] <= 109\n",
     " \n",
     "\n",
-    "Follow up: Can you come up with an algorithm that runs in O(m + n) time?"
+    "# Follow up: Can you come up with an algorithm that runs in O(m + n) time?"
    ]
   },
   {
