--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -107,17 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "id": "070d9ff9-5dfc-4f8e-b0f6-b1e611737edf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. \n",
+    "# Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each \n",
+    "# unique element appears only once. \n",
     "# The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
     "\n",
     "# Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
     "\n",
-    "# Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. \n",
+    "# Change the array nums such that the first k elements of nums contain the unique elements in the order they were \n",
+    "# present in nums initially. \n",
     "# The remaining elements of nums are not important as well as the size of nums.\n",
     "# Return k.\n",
     "# Custom Judge:\n",
@@ -147,7 +149,8 @@
     "\n",
     "# Input: nums = [0,0,1,1,1,2,2,3,3,4]\n",
     "# Output: 5, nums = [0,1,2,3,4,_,_,_,_,_]\n",
-    "# Explanation: Your function should return k = 5, with the first five elements of nums being 0, 1, 2, 3, and 4 respectively.\n",
+    "# Explanation: Your function should return k = 5, with the first five elements of nums being 0, 1, 2, 3, \n",
+    "# and 4 respectively.\n",
     "# It does not matter what you leave beyond the returned k (hence they are underscores).\n",
     " \n",
     "\n",
@@ -224,15 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "id": "7244c51f-579c-46d8-bc91-f53e71b911eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The order of the elements may be changed. \n",
+    "# Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. \n",
+    "# The order of the elements may be changed. \n",
     "# Then return the number of elements in nums which are not equal to val.\n",
     "\n",
-    "# Consider the number of elements in nums which are not equal to val be k, to get accepted, you need to do the following things:\n",
+    "# Consider the number of elements in nums which are not equal to val be k, to get accepted, \n",
+    "# you need to do the following things:\n",
     "\n",
     "# Change the array nums such that the first k elements of nums contain the elements which are not equal to val. \n",
     "# The remaining elements of nums are not important as well as the size of nums.\n",
