--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -1041,7 +1041,8 @@
    "source": [
     "# Given an array nums of size n, return the majority element.\n",
     "\n",
-    "# The majority element is the element that appears more than ⌊n / 2⌋ times. You may assume that the majority element always exists in the array.\n",
+    "# The majority element is the element that appears more than ⌊n / 2⌋ times. You may assume that the majority \n",
+    "# element always exists in the array.\n",
     "\n",
     "# Example 1:\n",
     "\n",
@@ -2148,22 +2149,6 @@
     "print(X.findDisappearedNumbers([4,3,2,7,8,2,3,1]))\n",
     "print(X.findDisappearedNumbers([1,1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "253b4d39-b4ba-4d9a-ac0e-4a1f5617c212",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e5d87c7-825b-4abf-97ba-33bf10b66993",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
