--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -2169,15 +2169,16 @@
     "# at most one cookie.\n",
     "\n",
     "# Each child i has a greed factor g[i], which is the minimum size of a cookie that the child will be content with; \n",
-    "# and each cookie j has a size s[j]. If s[j] >= g[i], we can assign the cookie j to the child i, \n",
-    "# and the child i will be content. Your goal is to maximize the number of your content children and output the maximum number.\n",
+    "# and each cookie j has a size s[j]. If s[j] >= g[i], we can assign the cookie j to the child i, and the child i \n",
+    "# will be content. Your goal is to maximize the number of your content children and output the maximum number.\n",
     "\n",
     "# Example 1:\n",
     "\n",
     "# Input: g = [1,2,3], s = [1,1]\n",
     "# Output: 1\n",
     "# Explanation: You have 3 children and 2 cookies. The greed factors of 3 children are 1, 2, 3. \n",
-    "# And even though you have 2 cookies, since their size is both 1, you could only make the child whose greed factor is 1 content.\n",
+    "# And even though you have 2 cookies, since their size is both 1, you could only make the child whose greed factor \n",
+    "# is 1 content.\n",
     "# You need to output 1.\n",
     "\n",
     "# Example 2:\n",
@@ -2686,7 +2687,8 @@
     "# The 1st place athlete's rank is \"Gold Medal\".\n",
     "# The 2nd place athlete's rank is \"Silver Medal\".\n",
     "# The 3rd place athlete's rank is \"Bronze Medal\".\n",
-    "# For the 4th place to the nth place athlete, their rank is their placement number (i.e., the xth place athlete's rank is \"x\").\n",
+    "# For the 4th place to the nth place athlete, their rank is their placement number \n",
+    "# (i.e., the xth place athlete's rank is \"x\").\n",
     "# Return an array answer of size n where answer[i] is the rank of the ith athlete.\n",
     "\n",
     "# Example 1:\n",
