--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -3353,8 +3353,10 @@
    "source": [
     "X = Solution()\n",
     "\n",
-    "print(X.findRestaurant([\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"], [\"Piatti\",\"The Grill at Torrey Pines\",\"Hungry Hunter Steakhouse\",\"Shogun\"]))\n",
-    "print(X.findRestaurant([\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"], [\"KFC\",\"Shogun\",\"Burger King\"]))\n",
+    "print(X.findRestaurant([\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"], \\\n",
+    "                       [\"Piatti\",\"The Grill at Torrey Pines\",\"Hungry Hunter Steakhouse\",\"Shogun\"]))\n",
+    "print(X.findRestaurant([\"Shogun\",\"Tapioca Express\",\"Burger King\",\"KFC\"], \\\n",
+    "                       [\"KFC\",\"Shogun\",\"Burger King\"]))\n",
     "print(X.findRestaurant([\"happy\",\"sad\",\"good\"], [\"sad\",\"happy\",\"good\"]))"
    ]
   },
@@ -3851,7 +3853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 153,
    "id": "d5f66f03-257c-4357-9bcd-6cf321f7580f",
    "metadata": {},
    "outputs": [],
@@ -3917,7 +3919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 154,
    "id": "eeaec5b6-13ad-4f5c-8fe4-00aa33540c3f",
    "metadata": {},
    "outputs": [],
@@ -3951,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 155,
    "id": "a55cd085-4152-4c0e-8a5a-656cc0ad1ac0",
    "metadata": {},
    "outputs": [
@@ -3983,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 157,
    "id": "ce656512-f649-4d58-9458-b941f9df0cca",
    "metadata": {},
    "outputs": [],
@@ -4020,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 158,
    "id": "e712b7ee-773f-481e-923b-4f48fcbf5612",
    "metadata": {},
    "outputs": [],
@@ -4076,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 159,
    "id": "616fe835-044f-40f0-8e24-ffe7c55b05bf",
    "metadata": {},
    "outputs": [
@@ -4087,7 +4089,7 @@
       "2\n",
       "6\n",
       "2\n",
-      "1\n",
+      "4\n",
       "3\n"
      ]
     }
@@ -4112,7 +4114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 161,
    "id": "9cdd03a4-1e29-4f31-b6d1-ff2b37a385c4",
    "metadata": {},
    "outputs": [],
@@ -4144,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 162,
    "id": "24ffd460-84be-41e9-9fe3-95e6bdf192b5",
    "metadata": {},
    "outputs": [],
@@ -4178,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 163,
    "id": "114ce711-38c3-48aa-9393-fe0117dc90c6",
    "metadata": {},
    "outputs": [
