--- a/Leetcode Easy Array Questions.ipynb
+++ b/Leetcode Easy Array Questions.ipynb
@@ -5850,9 +5850,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9e44782-dc98-40d3-9389-e9b0fe7ff6c6",
+   "metadata": {},
+   "source": [
+    "# 883. Projection Area of 3D Shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "ee54471d-f2e4-403a-be54-136a814161fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You are given an n x n grid where we place some 1 x 1 x 1 cubes that are axis-aligned with the x, y, and z axes.\n",
+    "\n",
+    "# Each value v = grid[i][j] represents a tower of v cubes placed on top of the cell (i, j).\n",
+    "\n",
+    "# We view the projection of these cubes onto the xy, yz, and zx planes.\n",
+    "\n",
+    "# A projection is like a shadow, that maps our 3-dimensional figure to a 2-dimensional plane. \n",
+    "# We are viewing the \"shadow\" when looking at the cubes from the top, the front, and the side.\n",
+    "\n",
+    "# Return the total area of all three projections.\n",
+    "\n",
+    "# Example 1:\n",
+    "\n",
+    "# Input: grid = [[1,2],[3,4]]\n",
+    "# Output: 17\n",
+    "# Explanation: Here are the three projections (\"shadows\") of the shape made with each axis-aligned plane.\n",
+    "\n",
+    "# Example 2:\n",
+    "\n",
+    "# Input: grid = [[2]]\n",
+    "# Output: 5\n",
+    "\n",
+    "# Example 3:\n",
+    "\n",
+    "# Input: grid = [[1,0],[0,2]]\n",
+    "# Output: 8\n",
+    "\n",
+    "# Constraints:\n",
+    "\n",
+    "# n == grid.length == grid[i].length\n",
+    "# 1 <= n <= 50\n",
+    "# 0 <= grid[i][j] <= 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "7455e881-7930-499d-8664-c90e8f15c792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    \n",
+    "    def projectionArea(self, grid):\n",
+    "\n",
+    "        proj_zx = 0\n",
+    "\n",
+    "        for row in grid:\n",
+    "\n",
+    "            proj_zx += max(row)\n",
+    "\n",
+    "        proj_yz = 0\n",
+    "\n",
+    "        proj_xy = 0\n",
+    "\n",
+    "        for i in range(len(grid)):\n",
+    "\n",
+    "            temp_max = 0\n",
+    "\n",
+    "            for j in range(len(grid)):\n",
+    "\n",
+    "                temp_max = max(temp_max, grid[j][i])\n",
+    "\n",
+    "                if grid[j][i] != 0:\n",
+    "\n",
+    "                    proj_xy += 1\n",
+    "\n",
+    "            proj_yz += temp_max\n",
+    "\n",
+    "        return proj_xy + proj_zx + proj_yz\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "4f14e5d4-c7fa-45bd-8173-15c2dad7c075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = Solution()\n",
+    "\n",
+    "print(X.projectionArea([[1,2],[3,4]]))\n",
+    "print(X.projectionArea([[2]]))\n",
+    "print(X.projectionArea([[1,0],[0,2]]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c8f814-7a36-4d0c-b145-a49397ac2ff4",
+   "id": "6aa59925-a0a5-4aa3-b32e-7c404c08740c",
    "metadata": {},
    "outputs": [],
    "source": []
